--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para sa Kinabukasan</title>
-  </head>
-  <body>
-    <h1>Todos sa Bahay</h1>
-  </body>
+<html>
+    <head>
+        <title>To Do List</title>
+        <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+        <link href="./font-awesome.css" rel="stylesheet">
+        <link href="./styles.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+            <div class="header">
+                <h1>TO DO TASKS</h1>
+                <div id="date"></div>
+                <div class="clear">
+                    <i class="fa fa-refresh"></i>
+                </div>
+            </div>
+
+            <div class="content">
+                <ul id="list">
+                    <!-- Sample ng list na lalabas -->
+                    <!-- <li class="item">
+                        <i class="fa fa-check-circle co" job="complete" id="0"></i>
+                        <p class="text lineThrough">Matulog</p>
+                        <i class="fa fa-trash-o de" job="delete" id="0"></i>
+                    </li> -->
+                </ul>
+            </div>
+            <div class="select">
+                <button value="completed" name="todos" class="filter-todo">show completed</button>
+                <button value="active" name="todos" class="filter-todo">show active</button>
+                <button value="all" name="todos" class="filter-todo">show all</button>
+            </div>
+            <div class="add-to-do">
+                    <i class="fa fa-plus-circle"></i>
+                    <input type="text" id="input" placeholder="Add todo task here">
+            </div>
+            <button onclick="newList()">new list</button>
+        </div>
+        <script src="./app.js"></script>
+    </body>
 </html>
