1st revised  work

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>To Do List</title>
         <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-        <link href="./font-awesome.css" rel="stylesheet">
-        <link href="./styles.css" rel="stylesheet">
+        <link href="css/font-awesome.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -37,6 +37,6 @@
             </div>
             <button onclick="newList()">new list</button>
         </div>
-        <script src="./app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
