--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,7 @@
         </ul>
       </div>
       <div class="select">
-        <button
-          value="completed"
-          id="showCompleted"
-          name="todos"
-          class="filter-todo"
-        >
+        <button value="completed" id="showCompleted" name="todos" class="filter-todo">
           show completed
         </button>
         <button value="active" id="showActive" name="todos" class="filter-todo">
@@ -49,7 +44,6 @@
         <i class="fa fa-plus-circle"></i>
         <input type="text" id="input" placeholder="Add todo task here" />
       </div>
-      <button onclick="newList()">new list</button>
     </div>
     <script src="app.js"></script>
   </body>
